<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, Hello!</string>
	<string name="app_name">Abalone 2</string>
	<string name="new_game">New Game</string>
	<string name="resume_game">Resume Game</string>
	<string name="vs_cpu">vs CPU</string>
	<string name="vs_human">vs Human</string>
	<string name="new_game_vs_human">New Game vs Human</string>
	<string name="new_game_vs_cpu">New Game vs CPU </string>
	<string name="black">Black side </string>
	<string name="white">White side </string>
	<string name="wins">won the game!</string>
	<string name="game_over">Game Over</string>

	<string name="rules_title">Rules</string>
	<string name="rules">The board consists of 61 circular spaces arranged
		in a hexagon, five on a side. Each player has 14 marbles that rest in
		the spaces and are initially arranged as shown at left.\nPlay
		alternates between the players one move at a time, with the black
		marbles moving first. For each move, a player moves a line of one, two
		or three one space.\nThe move can be either in-line (parallel to the
		line of marbles) or broadside (not parallel to the line of marbles),
		as illustrated at right.\n

		A player can push their opponent′s marbles
		which are in an adjacent
		space to their own with an in-line move only.
		They can only push if
		the pushing line has more marbles than the pushed
		line (three can push
		two or one; two can push one).\nMarbles must be
		pushed into an open
		space (i.e. not blocked by a marble of either
		colour).\nThe winner is
		the first player to gain six opposing marbles
		from the opponent.
	</string>
	<string name="tutorial_title">Tutorial</string>
	<string name="tutorial_step1_intro">
		Welcome to
		<b>Abalone 2 Tutorial!</b>
		You picked the right place to get a glimpse of Abalone game basics and
		rules. In a few steps we will teach you what is Abalone, what are its
		differences from other board games and how to play it.\n

		To proceed
		further, please press
		<b>Next</b>
		.
	</string>
	<string name="tutorial_step2_whatis">
		<b>Abalone</b>
		is a classic head-to-head board game for
		two players. Each player has
		<b>14 marbles</b>
		of
		the same color at his command, one player owns black marbles and the
		other owns white respectively.\n

		Here you can see the initial position
		of the marbles at the beginning of
		the game (also called
		<b>layout</b>
		). It is
		not the only layout used in Abalone - actually there are
		plenty of
		them!
	</string>
	<string name="tutorial_step3_movesingle">
		In order to succeed players take turns to move
		their marbles. Let\'s
		take a look
		how to move a
		<b>single marble</b>
		first.\n

		You can move a single marble to
		the neighbour cell
		<b>in any direction</b>
		.
		The only
		condition is that the
		destination cell should
		be
		<b>empty</b>
		- that
		is, not occupied by friendly or
		opponent\'s marble.
	</string>
	<string name="tutorial_step4_selectgroup">
		In Abalone you can also move
		<b>a group of marbles</b>
		,
		but there are some restrictions.
		First of all, maximum number of
		marbles you can move at a time is
		<b>three</b>
		. Second, they need to stay on
		the
		<b>same line</b>
		.
	</string>
	<string name="tutorial_step5_moveleap">
		The first kind of group move in Abalone is
		<b>leap</b>
		. It looks pretty much as single marble move. You can perform a leap
		in any of
		<b>four side directions</b>
		. Each of the destination cells must be empty.
	</string>
	<string name="tutorial_step6_movepush">
		Another kind of move is called
		<b>push</b>
		. Your marble can push one or two friendly marbles forward. The
		destination cell should be empty.
	</string>
	<string name="tutorial_step7_enemypush">
		By performing a push move you can actually push
		<b>opponent\'s marbles</b>
		. But remember that the number of your own marbles you push should be
		greater than number of opponent\'s marbles being pushed.
	</string>
	<string name="tutorial_step8_nopush">
		In this position black marbles cannot push white marbles though they
		are greater in number. The reason is that you can push only
		<b>three marbles</b>
		of yours and the number of white marbles is also three.
	</string>
	<string name="tutorial_step9_capture">
		If you push your opponent\'s marble
		<b>out of the board</b>
		it becomes
		<b>captured</b>
		(player loses it). To win Abalone game you have to capture
		<b>six</b>
		opponent\'s marbles.
	</string>
	<string name="tutorial_step10_gamestart">
		And the last thing. Unlike most other board games, in Abalone
		<b>black side moves first</b>
		. In classic layout the first move does not give much of an advantage,
		but in some other layouts it does.
	</string>
	<string name="tutorial_step11_finish">
		Congratulations, you have completed Abalone 2 Tutorial! Now you have
		the knowledge necessary to play your first game.
		<b>Good luck</b>
		and have fun! We hope you will
		<b>love</b>
		Abalone as much as we do!
	</string>

	<string name="preferences">Preferences</string>
	<string name="cpu_type">Choose AI level</string>
	<string name="game_layout">Game Layout</string>
	<string name="next">Next</string>
	<string name="prev">Prev</string>
	<string name="finish">Finish</string>
	<string name="game_options_title">Start new game</string>
	<string name="game_options_start_game">Start game</string>

</resources>
