<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:gravity="center_horizontal"
  android:orientation="vertical">
  
    <LinearLayout
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:gravity="center_horizontal"
  	android:orientation="vertical"
  	android:layout_weight="1.0"
  	android:id="@+id/tutorial_board_layout">
  	</LinearLayout>
  	
<TextView
	android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:id="@+id/turorial_text"
  android:layout_weight="0.0"
  android:text="@string/tutorial_step1_intro"
  />
  
  <LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="horizontal"
  android:gravity="bottom"
  style="@android:style/ButtonBar">
  
  		<Button
  			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:text="@string/prev"
			android:layout_weight="1"
			android:id="@+id/prev_step"/>
			
		<Button
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:text="@string/next"
			android:layout_weight="1"
			android:id="@+id/next_step"/>
  </LinearLayout>
  
</LinearLayout>
