<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="top">
	
	<LinearLayout 
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:orientation="horizontal">
		
		<Button 
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:text="@string/new_game_vs_human"
			android:id="@+id/n_game_human"
			android:layout_weight="1"/>
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="   S   "
			
			android:id="@+id/n_game_human_s"/>
	</LinearLayout>
	<LinearLayout 
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:orientation="horizontal">
		
		<Button 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/new_game_vs_cpu"
			android:layout_weight="1"
			android:id="@+id/n_game_cpu"/>
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="   S   "
			android:id="@+id/n_game_cpu_s"/>
	</LinearLayout>
	
	<Button 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/resume_game"
		android:id="@+id/resume_game"/>
	
	<ImageView
  		android:layout_width = "fill_parent"
  		android:layout_height = "fill_parent"
  		android:src="@drawable/menu"
  		android:scaleType="centerInside"
  		android:layout_gravity="center"
  		/>

</LinearLayout>

